import { ChatEntityBase } from '@/generated/entities/chat';

export class ChatEntity extends ChatEntityBase {}
