import { NextauthAccountEntityBase } from '@/generated/entities/nextauth-account';

export class NextauthAccountEntity extends NextauthAccountEntityBase {}
