import { NextauthSessionEntityBase } from '@/generated/entities/nextauth-session';

export class NextauthSessionEntity extends NextauthSessionEntityBase {}
