import { UserMemoryEntityBase } from '@/generated/entities/user-memory';

export class UserMemoryEntity extends UserMemoryEntityBase {}
