import { ChatUserEntityBase } from '@/generated/entities/chat-user';

export class ChatUserEntity extends ChatUserEntityBase {}
